--- a/package.json
+++ b/package.json
@@ -12,14 +12,23 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.8",
     "@storybook/nextjs": "^10.0.7",
     "@tanstack/react-query": "^5.90.9",
+    "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.2",
@@ -30,6 +39,7 @@
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
