--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-switch": "^1.2.6",
     "@storybook/nextjs": "^10.0.7",
     "@tanstack/react-query": "^5.90.9",
     "axios": "^1.13.2",
