--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "next": "16.0.3",
+    "next-intl": "^4.5.5",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
