Clarify structure and harden env handling

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-ÿþ
+# Client-safe configuration
+NEXT_PUBLIC_API_URL=http://localhost:3000
+
+# Server-only secrets (never expose with NEXT_PUBLIC_)
+MONGODB_URI=your-mongodb-uri
+JWT_SECRET=replace-with-strong-secret
